# PyPG

./: .gitignore  README.rst  pyproject.toml
src/pypg/: cinematica.py  intro_matplotlib.py
