[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypg"
version = "0.0.1"
authors = [
  { name="Michael Da Rosa", email="micheldarosazxc@gmail.com" },
]
description = "Python Proyecto Generico."
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Education",
    "Natural Language :: Spanish",
]
dependencies = [

]

[project.urls]
"Homepage" = ""